# ppt2pdfwithnotes

./: .gitignore  LICENSE  README.md  ppt2pdfwithnotes.py  pyproject.toml
src/ppt2pdfwithnotes/: __init__.py  main.py
